testdata/corset/invalid/compute_invalid_03.lisp
;;error:3:18-20:malformed source invocation
(defcolumns (X :i16))
(defcomputed (Y) ())
